--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div class="header-container">
             <div class="header-left">
                 <!-- Placeholder for Unipampa Logo -->
-                <img src="https://placehold.co/40x40/cbd5e1/2d3748?text=UNI" class="logo" alt="Logo Unipampa"/>
+                <img src="https://placehold.co/40x40/cbd5e1/2d3748?text=SIIL" class="logo" alt="Logo Unipampa"/>
                 <h1 class="app-title">Painel de Aulas</h1>
             </div>
             <div class="header-right">
